# ai-with-rust

./: .gitignore  ADVANCED_FEATURES.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_SUMMARY.md  FINAL_SUMMARY.md  IMPROVEMENTS_CHECKLIST.md  LICENSE  PARAMETER_INCREASE.md  QUICK_REFERENCE.md  README.md  README_NEW.md  SETUP_GUIDE.md  cuda_env.sh.example  quick_test.sh  run_cuda.sh.example  setup.sh
.github/workflows/: ci.yml
benches/: model_benchmarks.rs
config/: default.toml
examples/: checkpointing.rs  image_classification.rs  time_series.rs  transfer_learning.rs
src/: advanced.rs  advanced_features.rs  checkpoint.rs  cli.rs  config.rs  data.rs  demos.rs  error.rs  lib.rs  logging.rs  main.rs  models.rs  showcases.rs  utils.rs
tests/: advanced_features_test.rs  advanced_test.rs  models_test.rs
