[package]
name = "rust-ml"
version = "2.0.0"
edition = "2021"

[lib]
name = "rust_ml"
path = "src/lib.rs"

[[bin]]
name = "rust-ml"
path = "src/main.rs"

[dependencies]
tch = "0.20.0"
anyhow = "1.0"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"

[[bench]]
name = "model_benchmarks"
harness = false
